--- a/wabbit/pyproject.toml
+++ b/wabbit/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 pydantic = "^1.10.2"
 
 [tool.poetry.dev-dependencies]
+black = "^22.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
