--- a/wabbit/pyproject.toml
+++ b/wabbit/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.10"
 pydantic = "^1.10.2"
+typer = "^0.6.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
