--- a/wabbit/pyproject.toml
+++ b/wabbit/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.10"
 pydantic = "^1.10.2"
 typer = "^0.6.1"
+llvmlite = "^0.39.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
